--- a/server/project/templates/pages/admin/product/add.html
+++ b/server/project/templates/pages/admin/product/add.html
@@ -12,23 +12,22 @@ Winkel | Administration
             <li class="breadcrumb-item active">Products</li>
         </ol>
         <div class="col-md-4">
-            <form>
+            <form action="/admin/product/add" method="post">
                 <div class="form-group">
                   <label for="name">Name</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter name">
+                  <input type="text" class="form-control" id="name" name="name" aria-describedby="name" placeholder="Enter name">
                   <small id="emailHelp" class="form-text text-muted">Product name</small>
                 </div>
                 <div class="form-group">
                     <label for="price">Price</label>
-                    <input type="text" class="form-control" id="price" aria-describedby="price" placeholder="Enter price">
+                    <input type="text" class="form-control" id="price" name="price" aria-describedby="price" placeholder="Enter price">
                     <small id="emailHelp" class="form-text text-muted">Product price</small>
                 </div>
                 <div class="form-group">
                     <label for="image_url">Image Url</label>
-                    <input type="text" class="form-control" id="image_url" aria-describedby="image_url" placeholder="Enter image url">
+                    <input type="text" class="form-control" id="image_url" name="image_url" aria-describedby="image_url" placeholder="Enter image url">
                     <small id="emailHelp" class="form-text text-muted">Product image</small>
                 </div>
-    
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
